<resources>
    <string name="app_name">Boxing Timer</string>
    <string name="reset_text">Reset</string>
    <string name="settingsText">Settings</string>
    <string name="favourites_text">Favourites</string>
    <string name="settings_text">Settings</string>
    <string name="SHARED_PREFRENCES_NAME">Settings</string>
    <string name="FAVOURITES_DATA">Favourites</string>
    <string name="emptyFavourite">There is no favourites yet…</string>
    <string name="insertFavourite">Insert new favourite settings</string>
    <string name="deleteAllFavourites">Delete all favourites</string>
    <string name="OKText">OK</string>
    <string name="CANCELText">Cancel</string>
    <string name="favouriteSoundText">Sound</string>
    <string name="favouriteVibrationText">Vibration</string>
    <string name="favouritePreSoundText">Pre-Sound</string>
    <string name="favouriteSensorsText">Sensors</string>
    <string name="CURRENT_SETTINGS">CurrentSetting</string>
    <string name="settingsSaveButton">Save</string>
    <string name="settingsCancelButton">Cancel</string>
    <string name="settingsRoundsTitleTextView">Rounds</string>
    <string name="settingsRoundsIncreaseText">+</string>
    <string name="settingsRoundsDecreaseText">—</string>
    <string name="settingsTrainTimerTitle">Training Time</string>
    <string name="settingsBreakTimerTitleTextView">Break Time</string>
    <string name="settingsDelayTimeTitleTextView">Start delay time</string>
    <string name="settingsDelayTimeSecondTextView">Sec</string>
    <string name="settingsSoundSettingTitleTextView">Sound Setting</string>
    <string name="settingsSoundOnText">Sound On</string>
    <string name="settingsVolumeSettingTitleTextView">Volume Setting</string>
    <string name="settingsVolumeSettingListenButtonText">Listen</string>
    <string name="settingsVibrationSettingTitleTextView">Vibration Setting</string>
    <string name="settingsVibrationOnText">Vibration On</string>
    <string name="settingsPreliminarySoundSettingTitleTextView">Preliminary Sound Setting</string>
    <string name="settingsPreliminarySoundOnText">Preliminary Sound On</string>
    <string name="settingsSensorSettingTitleTextView">Sensor Setting</string>
    <string name="settingsProximitySensorOnText">Proximity Sensor On</string>
    <string name="settingsShakeSensorOnText">Shake Sensor On</string>
    <string name="colonText">:</string>
    <string name="back_slash">/</string>
    <string name="timer_on_toast">Timer On</string>
    <string name="timer_off_toast">Timer Off</string>
    <string name="round_text">Round\u0020</string>
</resources>