<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="#2C2B2B"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/listItem_ParentCick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listItem_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/yellow"
                tools:text="009" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/listItem_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:padding="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/white"
                    tools:text="Favourite name" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/listItem_timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/red"
                        tools:text="03:00" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/back_slash"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/listItem_break"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/green"
                        tools:text="01:00" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/red" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/favouriteSoundText"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/white"
                        app:autoSizeMaxTextSize="24sp"
                        app:autoSizeTextType="uniform" />

                    <ImageView
                        android:id="@+id/listItem_soundState"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_checked"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/favouriteVibrationText"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/white"
                        app:autoSizeMaxTextSize="24sp"
                        app:autoSizeTextType="uniform" />

                    <ImageView
                        android:id="@+id/listItem_vibrationState"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_unchecked"
                        tools:ignore="ContentDescription"
                        tools:rotation="45" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/favouritePreSoundText"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/white"
                        app:autoSizeMaxTextSize="24sp"
                        app:autoSizeTextType="uniform" />

                    <ImageView
                        android:id="@+id/listItem_preSoundState"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_checked"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/favouriteSensorsText"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                        android:textColor="@color/white"
                        app:autoSizeMaxTextSize="24sp"
                        app:autoSizeTextType="uniform" />

                    <ImageView
                        android:id="@+id/listItem_sensorState"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_unchecked"
                        tools:ignore="ContentDescription"
                        tools:rotation="45" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/listItem_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?selectableItemBackground"
            android:padding="5dp"
            android:rotation="45"
            android:src="@drawable/ic_delete"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    </LinearLayout>

</androidx.cardview.widget.CardView>